--- a/about.html
+++ b/about.html
@@ -43,19 +43,35 @@
         <div class="aboutcontainer">
             <div class="left">
                 <h4>About Us</h4><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, obcaecati voluptatum? Sequi libero vel similique! Fugiat autem officia praesentium nobis cupiditate. Quasi obcaecati ipsam ex, commodi numquam doloremque et, ut debitis maiores dolore rerum adipisci dolor sit quam, inventore totam iste molestiae officia dicta iusto. Quo tempore fugit tempora? Ducimus aliquam vitae unde id odit possimus molestiae porro optio obcaecati? Adipisci harum vitae cupiditate culpa eaque et odio pariatur eum natus vel nemo laboriosam omnis provident ad eveniet officiis, odit neque molestias, amet unde? Obcaecati temporibus omnis qui sit.</p><br>
-                    <div id="aboutus"><p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, repudiandae inventore? Aspernatur vitae maxime nesciunt, eos reprehenderit, neque repudiandae soluta nulla distinctio quam aliquid, numquam voluptate vero iure enim illo error. Quod tempora ipsam ratione aut quam velit explicabo quidem, culpa inventore totam quae officia ea, accusamus praesentium ipsa perferendis dolor id optio mollitia ex laboriosam ullam rerum, maiores iusto. Atque totam necessitatibus vel deserunt dignissimos rerum earum repudiandae facere voluptatibus beatae, dolore reiciendis, aliquam officia asperiores voluptates nesciunt? Maxime vitae ad hic repellendus vero provident, ea repudiandae blanditiis saepe sapiente quasi enim eum obcaecati, fugit laudantium! Fuga, animi dicta.
-                    </p></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, obcaecati voluptatum? Sequi
+                    libero vel similique! Fugiat autem officia praesentium nobis cupiditate. Quasi obcaecati ipsam ex,
+                    commodi numquam doloremque et, ut debitis maiores dolore rerum adipisci dolor sit quam, inventore
+                    totam iste molestiae officia dicta iusto. Quo tempore fugit tempora? Ducimus aliquam vitae unde id
+                    odit possimus molestiae porro optio obcaecati? Adipisci harum vitae cupiditate culpa eaque et odio
+                    pariatur eum natus vel nemo laboriosam omnis provident ad eveniet officiis, odit neque molestias,
+                    amet unde? Obcaecati temporibus omnis qui sit.</p><br>
+                <div id="aboutus">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, repudiandae inventore?
+                        Aspernatur vitae maxime nesciunt, eos reprehenderit, neque repudiandae soluta nulla distinctio
+                        quam aliquid, numquam voluptate vero iure enim illo error. Quod tempora ipsam ratione aut quam
+                        velit explicabo quidem, culpa inventore totam quae officia ea, accusamus praesentium ipsa
+                        perferendis dolor id optio mollitia ex laboriosam ullam rerum, maiores iusto. Atque totam
+                        necessitatibus vel deserunt dignissimos rerum earum repudiandae facere voluptatibus beatae,
+                        dolore reiciendis, aliquam officia asperiores voluptates nesciunt? Maxime vitae ad hic
+                        repellendus vero provident, ea repudiandae blanditiis saepe sapiente quasi enim eum obcaecati,
+                        fugit laudantium! Fuga, animi dicta.
+                    </p>
+                </div>
 
-                
+
             </div>
             <div class="right">
                 <div id="righticdiv">
-                <h4>What We Do</h4><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi impedit sequi harum praesentium
-                    officiis earum, doloribus totam nulla eaque adipisci omnis deserunt voluptas dolore corporis
-                    pariatur sit doloremque error quasi.</p>
+                    <h4>What We Do</h4><br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi impedit sequi harum praesentium
+                        officiis earum, doloribus totam nulla eaque adipisci omnis deserunt voluptas dolore corporis
+                        pariatur sit doloremque error quasi.</p>
                 </div>
             </div>
         </div>
