--- a/services.html
+++ b/services.html
@@ -14,11 +14,11 @@
         <nav>
             <div class="container">
 
-                <div>
+                <div class="baslik1">
                     <h2><a href="index.html"><span style="color: #A84F89;">Clarusway</span> Web Design</a></h2>
                 </div>
 
-                <div>
+                <div id="baslik2">
                     <ul>
                         <li><a href="index.html" target="_blank">HOME</a></li>
                         <li><a href="about.html" target="_blank">ABOUT</a></li>
